# orange-clicker

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
game/: auth_views.py  forms.py  urls.py
game/templates/: base.html  home.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
theme/static_src/: tailwind.config.js
